--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3-onboard/core": "^2.16.2",
     "@web3-onboard/injected-wallets": "^2.8.4",
+    "@openzeppelin/contracts": "^4.5.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
