--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@metamask/onboarding": "^1.0.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@openzeppelin/contracts": "^4.8.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,8 +16,9 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3-onboard/core": "^2.16.2",
     "@web3-onboard/injected-wallets": "^2.8.4",
-    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "hardhat": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -30,7 +33,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "npx hardhat compile",
+    "deploy": "npx hardhat run --network cronosTest ./scripts/deploy.js",
+    "verify": "npx hardhat run --network cronosTest ./scripts/verify.js"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +57,9 @@
     ]
   },
   "devDependencies": {
+    "@cronos-labs/hardhat-cronoscan": "^0.0.4",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solidity-coverage": "^0.8.2",
     "tailwindcss": "^3.3.1"
   }
 }
