--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cronos-labs/hardhat-cronoscan": "^0.0.4",
     "@deficonnect/web3-provider": "^1.6.14-dev.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -51,6 +52,7 @@
     "redux-sentry-middleware": "^0.2.2",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
+    "solidity-coverage": "^0.8.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.9.0",
     "web3-eth-contract": "^1.8.1",
@@ -85,20 +87,18 @@
     ]
   },
   "devDependencies": {
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.3.1",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "hardhat-gas-reporter": "^1.0.9",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "postcss": "^8.4.7",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.0",
-    "@cronos-labs/hardhat-cronoscan": "^0.0.4",
-    "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2"
+    "tailwindcss": "^3.3.1",
+    "url": "^0.11.0"
   }
 }
