--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "12.1.0",
     "patch-package": "^6.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-burger-menu": "^3.0.9",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
